--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -25,4 +25,13 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri:
+          issuer-uri: http://localhost:9090/realms/master
+
+  servlet:
+    multipart:
+      max-file-size: 50MB
+
+  application:
+    file:
+      uploads:
+        media-output.path :./uploads
