--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,7 +16,7 @@ spring:
         format_sql:true
 
     database: MYSQL
-    database-platform: org.hibernate.dailect.MySQLDialect
+    database-platform: org.hibernate.dialect.MySQLDialect
 
   flyway:
     enabled: false
